samples/_failures_safe/1761093145_daedbd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1e22dd4c.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_1e22dd4c.c:163:37: error: missing terminating " character
  163 |         case TOKEN_OPERATOR: printf("OPER
      |                                     ^~~~~
./samples/SAFE/__tmp_1e22dd4c.c:163:9: error: expected expression at end of input
  163 |         case TOKEN_OPERATOR: printf("OPER
      |         ^~~~
./samples/SAFE/__tmp_1e22dd4c.c:163:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1e22dd4c.c:163:9: error: expected declaration or statement at end of input
